# halcy

./: index.html  package-lock.json  package.json  vite.config.ts
.tanstack/tmp/: 2a658c68-18239f1719404d7dc5480ace4a531f62  2a658c68-9ddb1563e3c1d1823936fbd48bc1b632  2a658c68-f5d60ce915a5876a9c43ac2dcd276f16
src/: App.css  App.tsx  main.tsx  routeTree.gen.ts  types.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20240101000000_create_images_table.sql
src-tauri/src/: commands.rs  io.rs  lib.rs  main.rs  models.rs
src/components/: FileTree.tsx  HeaderButtons.tsx  ImagePlaceholder.tsx  ImageViewer.tsx  LibrarySwitching.tsx
src/components/layout/: GalleryLayout.tsx  Header.tsx  ImagesGallery.tsx  Inspector.tsx  Sidebar.tsx
src/components/masonry/: use-positioner.ts
src/components/ui/: button.tsx  command.tsx  dialog.tsx  input.tsx  popover.tsx  separator.tsx  sidebar.tsx  slider.tsx  tree.tsx
src/hooks/: useCounts.ts  useFolders.ts  useImageCounts.ts  useImages.ts  useLibrary.ts  useSettings.ts  useWindowSize.ts
src/lib/: config.ts  constants.ts  db.ts  utils.ts
src/routes/: __root.tsx  alltags.tsx  folder.$folderId.tsx  index.tsx  random.tsx  recent.tsx  route.$filterId.tsx  trash.tsx  uncategorized.tsx  untagged.tsx
src/store/: imageViewerStore.ts  inspectorStore.ts
