[package]
name = "halcy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "halcy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
rayon = "1.11.0"
walkdir = "2.5.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1.47.1", features = ["fs"] }
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
image = "0.25.6"
uuid = { version = "1.18.0", features = ["v4"] }
anyhow = "1.0.99"
tauri-plugin-persisted-scope = "2"
chrono = "0.4.41"

